--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "name": "Honō 焱 Omakase",
     "address": "10 Anson Rd, #01-50A International Plaza, Singapore 079903",
     "reservationUrl": "https://social.quandoo.com/en/groups/Hono-Omakase",
-    "videoUrl": "videos/banner.mp4",
+    "videoUrl": "assets/Hono_Banner.mp4",
     "dishImages": [
       "assets/Hono_Dish_1.jpg",
       "assets/Hono_Dish_2.jpg",
